# iterator_based_for

./: CMakeLists.txt  README.md  iterator_based_for.kdev4  main.cpp
include/: IteratorBasedFor.hpp
test/: CMakeLists.txt  IteratorBasedForTest.cpp
